log
Fri Apr 17 06:42:31 PM UTC 2026: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:77:5: error: expected ‘,’ or ‘;’ before ‘return’
   77 |     return index;
      |     ^~~~~~
hashmap.c:73:10: error: unused variable ‘index’ [-Werror=unused-variable]
   73 |     long index = hash(key, map->capacity)
      |          ^~~~~
hashmap.c:78:1: error: control reaches end of non-void function [-Werror=return-type]
   78 | }
      | ^
cc1: all warnings being treated as errors
d1ff18b
Fri Apr 17 06:43:51 PM UTC 2026: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:78:12: error: returning ‘long int’ from a function with return type ‘Pair *’ makes pointer from integer without a cast [-Wint-conversion]
   78 |     return index;
      |            ^~~~~
hashmap.c:74:11: error: unused variable ‘nuevo’ [-Werror=unused-variable]
   74 |     Pair* nuevo = NULL;
      |           ^~~~~
cc1: all warnings being treated as errors
c0533b2
Fri Apr 17 06:44:38 PM UTC 2026: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:75:9: error: expected identifier or ‘(’ before ‘->’ token
   75 |     Pair->key = index
      |         ^~
hashmap.c:74:11: error: unused variable ‘nuevo’ [-Werror=unused-variable]
   74 |     Pair* nuevo = NULL;
      |           ^~~~~
hashmap.c:73:10: error: unused variable ‘index’ [-Werror=unused-variable]
   73 |     long index = hash(key, map->capacity);
      |          ^~~~~
hashmap.c:80:1: error: control reaches end of non-void function [-Werror=return-type]
   80 | }
      | ^
cc1: all warnings being treated as errors
4adb2b9
Fri Apr 17 06:48:56 PM UTC 2026: 
 hashmap.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:75:5: error: implicit declaration of function ‘While’ [-Wimplicit-function-declaration]
   75 |     While(map->buckets[index] != NULL)
      |     ^~~~~
hashmap.c:75:39: error: expected ‘;’ before ‘{’ token
   75 |     While(map->buckets[index] != NULL)
      |                                       ^
      |                                       ;
   76 |     {
      |     ~                                  
hashmap.c:81:12: error: expected expression before ‘Pair’
   81 |     return Pair;
      |            ^~~~
hashmap.c:74:12: error: unused variable ‘new’ [-Werror=unused-variable]
   74 |     Pair * new = (Pair *)malloc(sizeof(Pair));
      |            ^~~
hashmap.c:82:1: error: control reaches end of non-void function [-Werror=return-type]
   82 | }
      | ^
cc1: all warnings being treated as errors
06bfa48
Fri Apr 17 06:49:10 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:75:5: error: implicit declaration of function ‘While’ [-Wimplicit-function-declaration]
   75 |     While(map->buckets[index] != NULL)
      |     ^~~~~
hashmap.c:75:39: error: expected ‘;’ before ‘{’ token
   75 |     While(map->buckets[index] != NULL)
      |                                       ^
      |                                       ;
   76 |     {
      |     ~                                  
dbe70de
Fri Apr 17 06:50:41 PM UTC 2026: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:75:5: error: implicit declaration of function ‘While’ [-Wimplicit-function-declaration]
   75 |     While(map->buckets[index] != NULL)
      |     ^~~~~
hashmap.c:75:39: error: expected ‘;’ before ‘{’ token
   75 |     While(map->buckets[index] != NULL)
      |                                       ^
      |                                       ;
   76 |     {
      |     ~                                  
hashmap.c:81:16: error: assignment to ‘void *’ from ‘long int’ makes pointer from integer without a cast [-Wint-conversion]
   81 |     new->value = index;
      |                ^
8e4a2c6
